[gd_scene load_steps=3 format=3 uid="uid://c1vmwhuvm7g3s"]

[ext_resource type="Script" uid="uid://hbrlmrartci3" path="res://inventory/scripts/slot.gd" id="1_doh3l"]
[ext_resource type="FontFile" uid="uid://c65m74bqp0vs3" path="res://assets/fonts/my 3x5 tiny mono pixel font.ttf" id="2_2i5il"]

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(30, 30)
offset_right = 30.0
offset_bottom = 30.0
script = ExtResource("1_doh3l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_2i5il")
theme_override_font_sizes/font_size = 6
horizontal_alignment = 2
vertical_alignment = 2

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_2i5il")
theme_override_font_sizes/font_size = 6
horizontal_alignment = 2
vertical_alignment = 2

[node name="SellLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_2i5il")
theme_override_font_sizes/font_size = 6
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
